--- a/sequencer/Cargo.toml
+++ b/sequencer/Cargo.toml
@@ -10,4 +10,5 @@ clap = { version = "3.1.6", features = ["cargo", "derive"] }
 q-filter-tree = { path = "../q-filter-tree" }
 arg_split = { path = "../arg_split" }
 serde_json = "1.0.64"
+serde = "^1.0.100"
 shared = { path = "../shared" }
