--- a/sequencer/bacon.toml
+++ b/sequencer/bacon.toml
@@ -2,5 +2,9 @@ default_job = "script"
 [jobs]
 
 [jobs.script]
-command = ["cargo", "run", "--color", "always", "--", "--quiet", "--script", "src/test_script.txt", "folder-listing"]
+command = ["cargo", "run", "--color", "always", "--",
+  "--quiet", "--script", "src/test_script.txt",
+  "--beet-cmd", "../fake-beet/target/debug/fake-beet",
+  "--source-type", "folder-listing",
+]
 need_stdout = true
