--- a/sequencer/Cargo.toml
+++ b/sequencer/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "3.2.18", features = ["cargo", "derive"] }
 q-filter-tree = { path = "../q-filter-tree", features = ["clap"] }
-arg_split = { path = "../arg_split" }
+arg_util = { path = "../arg_util" }
 serde_json = "1.0.91"
 serde = "^1.0"
 shared = { path = "../shared" }
