--- a/sequencer/Cargo.toml
+++ b/sequencer/Cargo.toml
@@ -5,10 +5,6 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[features]
-default = ["kdl"] # for rust-analyzer
-kdl = ["dep:kdl", "dep:miette"]
-
 [dependencies]
 clap = { version = "3.2.18", features = ["cargo", "derive"] }
 q-filter-tree = { path = "../q-filter-tree", features = ["clap"] }
@@ -17,5 +13,5 @@ serde_json = "1.0.91"
 serde = "^1.0"
 shared = { path = "../shared" }
 walkdir = "2"
-kdl = { version = "4.6.0", optional = true }
-miette = {version = "5.10.0", optional = true }
+kdl = { version = "4.6.0" }
+miette = {version = "5.10.0" }
